# S-CyberSage

./: .gitignore  CargoLambda.toml  README.md  cdk.json  package-lock.json  package.json
commands/: register-commands.ts
lambda/: role-toggle.py
lambda/s-cybersage-rs/: Cargo.toml
lambda/s-cybersage-rs/src/: http_handler.rs  main.rs
lambda/s-cybersage-rs/src/auth/: mod.rs
lambda/s-cybersage-rs/src/aws/: mod.rs  secrets.rs
lambda/s-cybersage-rs/src/discord/: interaction_request.rs  interaction_response.rs  roles.rs
lib/: cyber_sage_cdk-stack.ts  cybersage-stack.ts  payment-stack.ts
s-cybersage-rs/: Cargo.toml
s-cybersage-rs/src/: http_handler.rs  main.rs
s-cybersage-rs/src/auth/: verify.rs
s-cybersage-rs/src/aws/: dynamo_db.rs  secrets.rs
s-cybersage-rs/src/bal/: mod.rs  subscription.rs  subscription_manager.rs
s-cybersage-rs/src/bal/auth/: verify.rs
s-cybersage-rs/src/bal/discord/: mod.rs  role_manager.rs
s-cybersage-rs/src/bal/route/: command_router.rs  interaction_router.rs  mod.rs
s-cybersage-rs/src/dal/: mod.rs
s-cybersage-rs/src/dal/dao/: guild.rs  mod.rs  payment_dao.rs  subscription.rs
s-cybersage-rs/src/dal/model/: interaction_request.rs  interaction_response.rs  mod.rs
s-cybersage-rs/src/dal/reader/: secrets_reader.rs
s-cybersage-rs/src/discord/: interaction_request.rs  interaction_response.rs  mod.rs  roles.rs
test/: cyber_sage_cdk.test.ts
