[package]
name = "s-cybersage-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.93.0"
aws-sdk-secretsmanager = "1.88.0"
aws-types = "1.3.8"
aws_lambda_events = { version = "0.18.0", features = ["apigw"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
lambda_http = "0.17.0"
lambda_runtime = { version = "0.14.4", features = ["anyhow"] }
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.225", features = ["serde_derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
